--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webpack-starter</title>
-</head>
+<link href="/css/style.css" rel="stylesheet"></head>
 <body>
     <h1>Welcome to webpack!</h1>
-	<h2>test</h2>
-</body>
+	<h2></h2>
+<script type="text/javascript" src="/js/main.js"></script></body>
 </html>
