--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Welcome to webpack!</h1>
-	<h2>test</h2>
+	<div id="app">
+		<example-component></example-component>
+	</div>
 </body>
 </html>
