--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 <link href="/css/style.css" rel="stylesheet"></head>
 <body>
     <h1>Welcome to webpack!</h1>
-	<h2></h2>
+	<div id="app">
+		<example-component></example-component>
+	</div>
 <script type="text/javascript" src="/js/main.js"></script></body>
 </html>
